# FrogLight-Tools

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  deny.toml
crates/froglight-data/: Cargo.toml  README.md
crates/froglight-data/src/manifest/: asset_manifest.rs  mod.rs  release_manifest.rs  version_manifest.rs
crates/froglight-data/src/version/: mod.rs
crates/froglight-definitions/: Cargo.toml  README.md
crates/froglight-definitions/src/: lib.rs
crates/froglight-definitions/src/manifests/: mod.rs
crates/froglight-definitions/src/manifests/asset/: mod.rs  tests.rs
crates/froglight-definitions/src/manifests/release/: mod.rs  tests.rs
crates/froglight-definitions/src/manifests/version/: mod.rs  tests.rs
crates/froglight-definitions/src/manifests/yarn/: mod.rs  tests.rs
crates/froglight-definitions/src/releases_manifest/: mod.rs  tests.rs
crates/froglight-definitions/src/version/: mod.rs  regex.rs  tests.rs
crates/froglight-dependency/: Cargo.toml  README.md
crates/froglight-dependency/src/: container.rs  lib.rs
crates/froglight-dependency/src/dependency/: mod.rs
crates/froglight-dependency/src/dependency/client/: mod.rs  translations.rs
crates/froglight-dependency/src/dependency/minecraft/: data_generator.rs  decompiled_jar.rs  mapped_jar.rs  minecraft_code.rs  minecraft_jar.rs  mod.rs  pumpkin_extractor.rs  translations.rs
crates/froglight-dependency/src/dependency/mojang/: asset_manifest.rs  mod.rs  release_manifest.rs  version_manifest.rs
crates/froglight-dependency/src/dependency/vineflower/: decompiled_jar.rs  mod.rs  vineflower.rs
crates/froglight-dependency/src/dependency/yarn/: fabric_maven.rs  mapped_jar.rs  mod.rs  tiny_remapper.rs  yarn_mapping.rs  yarn_maven.rs
crates/froglight-dependency/src/version/: mod.rs  regex.rs  test.rs
crates/froglight-extract/: Cargo.toml  README.md  build.rs
crates/froglight-extract/src/: bundle.rs  bytecode.rs  cmd.rs  consts.rs  lib.rs  log.rs  main.rs  module.rs
crates/froglight-extract/src/json/: mod.rs
crates/froglight-extract/src/module/: json.rs  mod.rs
crates/froglight-extract/src/sources/: mod.rs
crates/froglight-extract/src/sources/builtin_json/: mod.rs
crates/froglight-extract/src/sources/bytecode/: mod.rs  traits.rs
crates/froglight-extract/src/sources/mojang/: mod.rs  resource_pack.rs
crates/froglight-extractor/: Cargo.toml  README.md  build.rs
crates/froglight-extractor/src/cli/: main.rs
crates/froglight-extractor/src/lib/: classmap.rs  lib.rs
crates/froglight-extractor/src/lib/jar/: mappings.rs  minecraft.rs  mod.rs
crates/froglight-extractor/src/lib/manifest/: asset.rs  mod.rs  release.rs  version.rs
crates/froglight-extractor/src/lib/modules/: debug.rs  info.rs  mod.rs
crates/froglight-generate/: Cargo.toml  README.md  build.rs
crates/froglight-generate/examples/block/: main.rs
crates/froglight-generate/examples/packet/: main.rs
crates/froglight-generate/src/: bundle.rs  cli.rs  consts.rs  datamap.rs  lib.rs  main.rs
crates/froglight-generate/src/files/: datapath.rs  mod.rs  protocol.rs
crates/froglight-generate/src/generator/packet/: mod.rs  parent.rs  result.rs  state.rs  wrapper.rs
crates/froglight-generate/src/helpers/: mod.rs  module.rs  name.rs  names.rs  tag.rs  write.rs
crates/froglight-generate/src/lib/: cli.rs  config.rs  datamap.rs  lib.rs
crates/froglight-generate/src/lib/modules/: mod.rs
crates/froglight-generate/src/modules/: mod.rs
crates/froglight-generate/src/modules/blocks/: attribute.rs  block.rs  mod.rs  version.rs  version_blocks.rs
crates/froglight-generate/src/modules/packets/: mod.rs  packet.rs  state.rs  version.rs
crates/froglight-generate/src/modules/registries/: contents.rs  generated.rs  mod.rs  version.rs
crates/froglight-generator/: Cargo.toml  README.md  build.rs
crates/froglight-generator/src/: command.rs  logging.rs  main.rs
crates/froglight-generator/src/config/: mod.rs
crates/froglight-generator/src/modules/: mod.rs  util.rs
crates/froglight-generator/src/modules/network/: mod.rs
crates/froglight-generator/src/modules/protocol/: mod.rs  packets.rs  states.rs  structures.rs  versions.rs
crates/froglight-parse/: Cargo.toml
crates/froglight-parse/examples/: packets.rs
crates/froglight-parse/src/: lib.rs  test.rs  version.rs
crates/froglight-parse/src/file/: mod.rs  traits.rs
crates/froglight-parse/src/file/blocks/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/datapath/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/entity/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/generator/: asset.rs  data.rs  mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/manifest/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/mavenmetadata/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/protocol/: mod.rs  test.rs  traits.rs  types.rs
crates/froglight-parse/src/file/versioninfo/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/file/yarnmaven/: mod.rs  test.rs  traits.rs
crates/froglight-parse/src/files/: datapath.rs  mod.rs
crates/froglight-parse/src/files/protocol/: mod.rs  types.rs
crates/froglight-parse/src/version/: mod.rs  test.rs
crates/froglight-tool-macros/: Cargo.toml  README.md
crates/froglight-tool-macros/src/: lib.rs
crates/froglight-tool-macros/src/dependency/derive/: dependency.rs  mod.rs
crates/froglight-tool-macros/src/extract/derive/: mod.rs  module.rs
crates/froglight-tools/: Cargo.toml
crates/froglight-tools/src/extractor/: README.md  cli.rs  extract.rs  logging.rs  main.rs
crates/froglight-tools/src/generator/: README.md  cli.rs  config.rs  generate.rs  main.rs
crates/froglight-tools/src/generator/combined/: mod.rs
crates/froglight-tools/src/tools/: README.md  deobfuscate.rs  jar_tools.rs  json.rs  lib.rs  logging.rs  manifests.rs  mappings.rs
froglight-data/: Cargo.toml
froglight-data/src/: lib.rs
froglight-data/src/manifest/: version_manifest.rs
froglight-data/src/version/: mod.rs
froglight-extractor/: Cargo.toml
froglight-generator/: Cargo.toml
(+100 files in other folders)
