[workspace]
resolver = "2"
members = []

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
invalid_html_tags = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
unnecessary_cast = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["EightFactorial"]
homepage = "https://github.com/EightFactorial/FrogLight-Tools"
repository = "https://github.com/EightFactorial/FrogLight-Tools"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
convert_case = "0.7"
derive_more = { version = "1.0", features = ["full"] }
hashbrown = "0.15"
itertools = "0.14"
quick-xml = { version = "0.37", features = ["async-tokio", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.43"
tracing = "0.1"

[package]
name = "froglight-tools"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
