[workspace]
members = ["crates/froglight-dependency", "crates/froglight-extract", "crates/froglight-tool-macros"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
unnecessary_cast = "warn"

[workspace.package]
authors = ["EightFactorial"]
edition = "2021"
homepage = "https://github.com/EightFactorial/FrogLight-Tools"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/FrogLight-Tools"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
cafebabe = { features = ["threadsafe"], version = "0.9" }
clap = { features = ["derive"], version = "4.5" }
convert_case = "0.8"
derive_more = { features = ["full"], version = "2.0" }
downcast-rs = "2.0"
froglight-dependency = { path = "crates/froglight-dependency", version = "0.1" }
froglight-extract = { path = "crates/froglight-extract", version = "0.1" }
froglight-tool-macros = { path = "crates/froglight-tool-macros", version = "0.1" }
hashbrown = { features = ["serde"], version = "0.15" }
indexmap = { features = ["serde"], version = "2.9" }
inventory = "0.3"
proptest = "1.7"
quick-xml = { features = ["async-tokio", "serialize"], version = "0.37" }
reqwest = { features = ["json", "rustls-tls"], version = "0.12" }
serde = { features = ["derive"], version = "1.0" }
serde_json = { features = ["preserve_order"], version = "1.0" }
tokio = "1.45"
tracing = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
zip = { features = ["deflate"], version = "4.0" }

[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "froglight-tools"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cafebabe = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
derive_more = { workspace = true }
froglight-dependency = { workspace = true }
froglight-extract = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { features = ["full"], workspace = true }
toml_edit = { features = ["serde"], version = "0.22" }
tracing = { workspace = true }

[features]
