[package]
name = "froglight-data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["EightFactorial"]
homepage = "https://github.com/EightFactorial/FrogLight-Tools"
repository = "https://github.com/EightFactorial/FrogLight-Tools"
readme = "README.md"

[dependencies]
semver = { version = "1.0.21", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
