[package]
name = "froglight-data"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.homepage]
workspace = true
[package.repository]
workspace = true
[package.readme]
workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
regex = "1.10.3"
semver = { version = "1.0.21", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
