[package]
name = "froglight-extractor"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.homepage]
workspace = true
[package.repository]
workspace = true
[package.readme]
workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"], optional = true }
froglight-data = { version = "0.1.0", path = "../froglight-data" }

[features]
default = []

# Enable to include crates required for the cli binary
binary = ["dep:clap"]

[[bin]]
name = "froglight-extractor"
path = "src/cli/main.rs"
required-features = ["binary"]
