[package]
name = "froglight-data"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.homepage]
workspace = true
[package.repository]
workspace = true
[package.readme]
workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
hashbrown = { workspace = true, features = ["serde"] }
regex = "1.10.4"
semver = { version = "1.0.22", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }


[features]
default = []
