[package]
name = "froglight-definitions"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
quick-xml = { version = "0.35.0", features = ["serialize"] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
compact_str = { version = "0.7.1", features = ["serde"] }
hashbrown = { workspace = true, features = ["serde"] }
regex = "1.10.5"
semver = { version = "1.0.23", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
