[package]
name = "froglight-dependency"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
anyhow = { workspace = true }
downcast-rs = { workspace = true }
froglight-tool-macros = { workspace = true, features = ["dependency"] }
hashbrown = { workspace = true }
quick-xml = { workspace = true }
regex = "1.11"
reqwest = { workspace = true }
semver = { version = "1.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }

[features]
