[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "froglight-dependency"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cafebabe = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
convert_case = { workspace = true }
downcast-rs = { workspace = true }
froglight-tool-macros = { workspace = true, features = ["dependency"] }
hashbrown = { workspace = true }
quick-xml = { workspace = true }
regex = "1.11"
reqwest = { workspace = true }
semver = { version = "1.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
tracing = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[features]
