[package]
name = "froglight-extract"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bin]]
name = "froglight-extract"
path = "src/main.rs"
required-features = ["cmd"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
froglight-dependency = { workspace = true }
froglight-tool-macros = { workspace = true }
inventory = { version = "0.3" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["cmd", "logging"]

# Enable the provided bin functions.
cmd = ["dep:clap"]
# Enable logging.
logging = ["dep:tracing-subscriber"]
