[package]
name = "froglight-extractor"
build = "build.rs"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.homepage]
workspace = true
[package.repository]
workspace = true
[package.readme]
workspace = true

[lints]
workspace = true

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitoxide"] }

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
async_zip = { version = "0.0.16", features = ["full"] }
anyhow = { workspace = true, optional = true }
cafebabe = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
froglight-data = { version = "0.1.0", path = "../froglight-data" }
hashbrown = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
], optional = true }

[lib]
name = "froglight_extractor"
path = "src/lib/lib.rs"

[[bin]]
name = "froglight-extractor"
path = "src/bin/cli/main.rs"
required-features = ["binary"]

[features]
default = []

# Enable to include crates required for the cli binary
binary = ["dep:anyhow", "dep:cafebabe", "dep:clap", "dep:tracing-subscriber"]
