[package]
name = "froglight-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[dependencies]
anyhow = { workspace = true }
froglight-parse = { version = "0.1.0", path = "../froglight-parse" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yml = "0.0.12"
tokio = { workspace = true, features = ["fs", "macros"] }
tracing = { workspace = true }
