[package]
name = "froglight-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dev-dependencies]
convert_case = "0.6"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tokio = { workspace = true, features = ["full"] }

[dependencies]
anyhow = { workspace = true }
froglight-parse = { version = "0.1.0", path = "../froglight-parse" }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }
tracing = { workspace = true }
