[package]
name = "froglight-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = "4.5"
clap-verbosity-flag = "3.0"
compact_str = { workspace = true }
convert_case = "0.6"
derive_more = { workspace = true }
froglight-parse = { version = "0.1.0", path = "../froglight-parse" }
hashbrown = { workspace = true }
itertools = "0.13"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { workspace = true }
serde = { workspace = true }
syn = { version = "2.0", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
toml = "0.8"
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = "0.3"

[[bin]]
name = "froglight-generate"
path = "src/bin/generator/main.rs"

[lib]
name = "froglight_generate"
path = "src/lib/lib.rs"
