[package]
name = "froglight-generator"
build = "build.rs"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.homepage]
workspace = true
[package.repository]
workspace = true
[package.readme]
workspace = true

[lints]
workspace = true

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitoxide"] }

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
froglight-data = { version = "0.1.0", path = "../froglight-data" }
froglight-extractor = { version = "0.1.0", path = "../froglight-extractor" }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[features]
default = []
