[package]
name = "froglight-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1.5.0"

[dependencies]
anyhow = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
regex = "1.11"
reqwest = { workspace = true }
semver = "1.0"
serde = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yml = "0.0.12"
tokio = { workspace = true, features = ["fs", "macros"] }
tracing = { workspace = true }
