[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "froglight-tool-macros"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
convert_case = { workspace = true }
darling = "0.20"
proc-macro2 = "1.0"
quote = { version = "1.0", features = ["proc-macro"] }
syn = { version = "2.0", features = ["full", "printing", "proc-macro"] }
toml_edit = { version = "0.22", default-features = false, features = ["parse"] }

[features]
default = []

# Enable `froglight-dependency` macros.
dependency = []
# Enable `froglight-extract` macros.
extract = []
