[package]
name = "froglight-tools"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
async_zip = "0.0.17"
anyhow = { workspace = true }
cafebabe = { workspace = true }
clap = "4.5.4"
convert_case = "0.6.0"
froglight-definitions = { version = "0.1.0", path = "../froglight-definitions" }
froglight-extract = { version = "0.1.0", path = "../froglight-extract" }
froglight-generate = { version = "0.1.0", path = "../froglight-generate" }
hashbrown = { workspace = true }
tokio = "1.37.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.18"

[[bin]]
name = "extractor"
path = "src/extractor/main.rs"

[[bin]]
name = "generator"
path = "src/generator/main.rs"
