[package]
name = "froglight-tools"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.18.1"
clap = "4.5.4"
froglight-definitions = { version = "0.1.0", path = "../froglight-definitions" }
froglight-extract = { version = "0.1.0", path = "../froglight-extract" }
froglight-generate = { version = "0.1.0", path = "../froglight-generate" }
hashbrown = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8.12", features = ["parse", "preserve_order"] }
tracing-subscriber = "0.3.18"

[[bin]]
name = "extractor"
path = "src/extractor/main.rs"

[[bin]]
name = "generator"
path = "src/generator/main.rs"
